fix channel punch ticks z-index

--- a/src/styles/part/core-representations.module.css
+++ b/src/styles/part/core-representations.module.css
@@ -91,7 +91,6 @@
     content: "";
     display: block;
     position: relative;
-    z-index: 10;
     transform: translateY(-50%);
     height: 5px;
     width: 100%;
